--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "third_party/python-future"]
 	path = third_party/python-future
 	url = https://github.com/PythonCharmers/python-future
+[submodule "third_party/pythonfutures"]
+	path = third_party/pythonfutures
+	url = https://github.com/agronholm/pythonfutures.git
